--- a/ios/SNDemo/Info.plist
+++ b/ios/SNDemo/Info.plist
@@ -56,5 +56,25 @@
 			</dict>
 		</dict>
 	</dict>
+	<key>CFBundleURLTypes</key>
+<array>
+  <dict>
+    <key>CFBundleURLSchemes</key>
+    <array>
+      <string>fb361420194689424</string>
+    </array>
+  </dict>
+</array>
+<key>FacebookAppID</key>
+<string>361420194689424</string>
+<key>FacebookDisplayName</key>
+<string>SNDemo</string>
+<key>LSApplicationQueriesSchemes</key>
+<array>
+  <string>fbapi</string>
+  <string>fb-messenger-share-api</string>
+  <string>fbauth2</string>
+  <string>fbshareextension</string>
+</array>
 </dict>
 </plist>
